<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="color"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="블루투스 연결 상태"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Status : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ConnStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Not Connected"
                    android:textColor="#FF0000"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="챔버 내 미세먼지 농도"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/currDustTextView"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:overScrollMode="never"
                    android:textSize="60sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="μg/m³"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="공조 제어"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Status : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ModeStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/off" />

                <Button
                    android:id="@+id/BtnAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto" />

                <Button
                    android:id="@+id/BtnLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low" />

                <Button
                    android:id="@+id/BtnMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium" />

                <Button
                    android:id="@+id/BtnHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--    <TextView-->
    <!--        android:id="@+id/receive_text"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:freezesText="true"-->
    <!--        android:gravity="bottom"-->
    <!--        android:scrollbars="vertical"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="?android:attr/listDivider" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <EditText-->
    <!--            android:id="@+id/send_text"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_weight="1"-->
    <!--            android:inputType="text|textNoSuggestions"-->
    <!--            android:singleLine="true" />-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/send_btn"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            app:srcCompat="@drawable/ic_send_white_24dp" />-->
    <!--    </LinearLayout>-->

</LinearLayout>

